Revert log4j properties and DummyXmlOutputStreamProvider changes